# image_compressor

./: .gitignore  CMakeLists.txt  README.md  build.bat  execution.bat
Qt/lib/cmake/Qt5Gui/: Qt5Gui_QVirtualKeyboardPlugin.cmake  Qt5Gui_QWebGLIntegrationPlugin.cmake
include/: AClustering.hpp  Cluster.hpp  Color.hpp  Distance.hpp  ImageLoader.hpp  KMeansClustering.hpp  Pixel.hpp  Vector.hpp
src/: AClustering.cpp  Cluster.cpp  DbscanClustering.cpp  Distance.cpp  ImageLoader.cpp  KMeansClustering.cpp  Utils.cpp  main.cpp
src/include/: DbscanClustering.hpp  KMeansClustering.hpp  Vector.hpp
